<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/extraLayout"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_extra_location"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/extra_location" />
    <Button
        android:id="@+id/button_extra_backup"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/extra_backup" />
    <Button
        android:id="@+id/button_extra_restore"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/extra_restore" />
    <Button
        android:id="@+id/button_extra_intent"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/extra_intent" />
    <Button
        android:id="@+id/button_extra_files_dir"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/extra_files_dir" />
    <Button
        android:id="@+id/button_extra_dirs"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/extra_dirs" />
    <Button
        android:id="@+id/button_extra_files"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/extra_files" />

    <TextView
        android:id="@+id/extra_status_title"
        style="@style/TableRowTextStyleTitle"
        android:layout_marginTop="20dp"
        android:text="@string/extra_status" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/extra_status"
            style="@style/TableRowTextStyle"
            android:text="@string/extra_status" />
</ScrollView>
</LinearLayout>