<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/listLayout"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp">
    <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#00000000"
        android:stretchColumns="1">
        <TableRow android:background="@color/blue"
            android:textColor="@color/white">
        <TextView
            android:id="@+id/listTitleNr"
            style="@style/TableRowTextStyleTitle"
            android:text="@string/listTitleNr" />
        <TextView
            android:id="@+id/listTitleTime"
            style="@style/TableRowTextStyleTitle"
            android:text="@string/listTitleTime" />
        <TextView
            android:id="@+id/listTitleType"
            style="@style/TableRowTextStyleTitle"
            android:text="@string/listTitleType" />
        <TextView
            android:id="@+id/listTitleCity"
            style="@style/TableRowTextStyleTitle"
            android:text="@string/listTitleCity" />
        <TextView
            android:id="@+id/listTitleDuration"
            style="@style/TableRowTextStyleTitle"
            android:text="@string/listTitleDuration" />
        <TextView
            android:id="@+id/listTitleKm"
            style="@style/TableRowTextStyleTitle"
            android:text="@string/listTitleKm" />
        </TableRow>
    </TableLayout>
</ScrollView>
</LinearLayout>